	  to LWP, hence test breaks.
	* discogs, openbsd: fixed tests.
	* mdn, mysqldoc, pgdoc, phpdoc: added tests.
	* w3_custom_search:
	  + document in README.
	  + remove documentation for ixquick support.
	    It still works(ish), but doesn't support enough features
	    to support (eg) mysqldoc -v=.
	  + add -custom-search= commandline option.

2013-09-30  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: mdn, mysqldoc, pgdoc, phpdoc
	* new function: w3_custom_search
	  Is used by elvi that use a generic search engine with (eg) site:
	  or inurl: to narrow down the search.
	  Pass it -s=site -u=url for site: and inurl: args
	  plus the quoted search args
	* new environment variable: SURFRAW_customsearch_provider
	  to set provider used by w3_custom_search
	  can be set to: google, duckduckgo or ixquick.
	  Currently affects: mysqldoc, netbsd(*), openbsd(*), pgdoc,
	  phpdoc, mysqldoc.
	  (*) = only used by some options of elvi.
	* new internal variable w3_shquoted_args, contains
	  arguments 'quoted' 'like this' for passing
	  to w3_custom_search
	* Fixed url-encoding for '\'

2013-05-07  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: jquery

2013-05-04  Ian Beckwith  <ianb@erislabs.net>

	* bump version to 2.2.9
	* rae: fixed, at least as far as the test passing.
	  Could really do with some love from someone who
	  actually speaks spanish.
	* ctan: fixed search, updated options.
	  Note command-line options have changed.
	* genportage: switch to gpo.zugaina.org
	* debcodesearch: new (trivial) elvi for codesearch.debian.net
	* jamendo: fix url, disable test (search now javascript)
	* deli: fix url; remove options; disable test (search now javascript)

2013-04-28  Ian Beckwith  <ianb@erislabs.net>

	* musicbrainz: fixed mbid search.
	* springer: fixed test.

2013-04-27  Ian Beckwith  <ianb@erislabs.net>

	* javasun: fixed test.

2013-04-24  Ian Beckwith  <ianb@erislabs.net>

	* Rewrote deblists for new xapian search.
	  + -author, -lists, -lang no longer supported.