@@ -345,7 +345,7 @@ Global options:
   -version                      Display Surfraw version (2.2.7)
   --                            End of options
 Copyright:
-  Copyright (c) 2003-2010 The Surfraw-Devel Team
+  Copyright (c) 2003-2013 The Surfraw-Devel Team
                            <surfraw-devel@lists.alioth.debian.org>
   Copyright (c) 2000-2001 Julian Assange <proff@iq.org>
   Copyright (c) 2001 Australian Institute for Collaborative Research
