@@ -10,7 +10,7 @@ project, you're welcome to contribute.
 New versions are available from http://surfraw.alioth.debian.org/dist/
 
 Files: *
-Copyright: Copyright (c) 2003-2010 The Surfraw-Devel team
+Copyright: Copyright (c) 2003-2013 The Surfraw-Devel team
            Copyright (c) 2000-2001 Julian Assange <proff@iq.org>
            Copyright (c) 2001 Australian Institute for Collaborative Research
            Copyright (c) 2000 Melbourne Institute for Advanced Study
