@@ -162,7 +162,7 @@ man page for surfraw(1) by Christian Surchi.
 
 .SH COPYRIGHT
 
-  Copyright (c) 2003\(hy2010 The Surfraw\-Devel Team
+  Copyright (c) 2003\(hy2013 The Surfraw\-Devel Team
                            <surfraw\-devel@lists.alioth.debian.org>
   Copyright (c) 2000\(hy2001 Julian Assange <proff@iq.org>
   Copyright (c) 2001 Australian Institute for Collaborative Research
