@@ -387,7 +387,7 @@ man page by Christian Surchi.
 
 .SH COPYRIGHT
 
-  Copyright (c) 2003-2008 The Surfraw\-Devel Team
+  Copyright (c) 2003-2013 The Surfraw\-Devel Team
                            <surfraw\-devel@lists.alioth.debian.org>
   Copyright (c) 2000-2001 Julian Assange <proff@iq.org>
   Copyright (c) 2001 Australian Institute for Collaborative Research
