@@ -18,6 +18,7 @@
 	    It still works(ish), but doesn't support enough features
 	    to support (eg) mysqldoc -v=.
 	  + add -custom-search= commandline option.
+	* updated copyright years to 2013.
 
 2013-09-30  Ian Beckwith  <ianb@erislabs.net>
 
